footer Making Done

--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,7 @@
 :root {
   --brown-primary: #eb8d2b;
   --black-secondary: black;
+  --white-third: rgb(255, 255, 255);
   --font-primary: "Poppins", sans-serif;
 }
 
