--- a/src/style.scss
+++ b/src/style.scss
@@ -6,6 +6,21 @@
   --white-third: rgb(255, 255, 255);
   --font-primary: "Poppins", sans-serif;
   --font-heading: "Playfair Display", serif;
+  --bg-white: #fff;
+  --bg-black: #000000;
+  --bg-light-pink: #d95a00;
+  --bg-light-gray: #f6f9fe;
+  --bg-gradient: linear-gradient(to top, #eb8d2b 0%, rgb(173 112 0) 100%);
+  --bg-card-shodow: 0 0.188rem 1.25rem 0px rgba(0, 0, 0, 0.06);
+  --bg-card-shodow: 0 2rem 5rem rgb(0, 0, 0, 0.06);
+  --bg-light-gray-1: #eee;
+
+  --primary-font: "Poppins", sans-serif;
+  --text-white: #fff;
+  --text-black: #2c2c2c;
+  --text-light-black: #444;
+  --text-light-pink: #ff007a;
+  --text-light-gray: #7e8085;
 }
 
 h1 {
@@ -37,4 +52,186 @@ svg {
 
 .row {
   --bs-gutter-x: 0rem !important;
+}
+
+body {
+  font-family: var(--primary-font);
+  font-size: 1rem;
+  line-height: 1.75rem;
+  background: var(--bg-white);
+  color: var(--text-black);
+  overflow-x: hidden;
+}
+h1 {
+  color: var(--text-white);
+  font-size: 3.563rem;
+  line-height: 4.563rem;
+  letter-spacing: 0.125rem;
+  font-weight: 400;
+}
+
+h2 {
+  color: var(--text-black);
+  font-size: 2.875rem;
+  line-height: 3.75rem;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 1.563rem;
+  font-weight: 400;
+  color: var(--text-black);
+  line-height: 2.375rem;
+}
+
+h5 {
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: 0.063rem;
+  line-height: 1.688rem;
+  color: var(--text-light-pink);
+  text-transform: uppercase;
+  font-family: var(--font-heading) !important;
+}
+
+.section {
+  position: relative;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
+p {
+  margin-bottom: 0;
+}
+a {
+  color: var(--text-light-black);
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+a:hover,
+a:focus {
+  color: var(--text-light-pink);
+}
+
+a,
+a:hover,
+a:focus,
+.btn:focus {
+  text-decoration: none;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+ol li,
+ul li {
+  list-style: none;
+}
+button,
+button:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+}
+
+body {
+  font-family: var(--primary-font);
+  font-size: 1rem;
+  line-height: 1.75rem;
+  background: var(--bg-white);
+  color: var(--text-black);
+  overflow-x: hidden;
+}
+h1 {
+  color: var(--text-white);
+  font-size: 3.563rem;
+  line-height: 4.563rem;
+  letter-spacing: 0.125rem;
+  font-weight: 400;
+}
+
+h2 {
+  color: var(--text-black);
+  font-size: 2.875rem;
+  line-height: 3.75rem;
+  font-weight: 400;
+}
+
+h3 {
+  font-size: 1.563rem;
+  font-weight: 400;
+  color: var(--text-black);
+  line-height: 2.375rem;
+}
+
+h5 {
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: 0.063rem;
+  line-height: 1.688rem;
+  color: var(--text-light-pink);
+  text-transform: uppercase;
+}
+
+section,
+.section {
+  position: relative;
+}
+
+.container {
+  width: 100%;
+  margin: 0 auto;
+}
+p {
+  margin-bottom: 0;
+}
+a {
+  color: var(--text-light-black);
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+a:hover,
+a:focus {
+  color: var(--text-light-pink);
+}
+
+a,
+a:hover,
+a:focus,
+.btn:focus {
+  text-decoration: none;
+  outline: none;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+}
+ol,
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+ol li,
+ul li {
+  list-style: none;
+}
+button,
+button:focus {
+  outline: none;
+  box-shadow: none;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
 }
